objects/Filter_Words_MDT__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for Filtering auto lead conversion.
We mapped with name instead of word.</description>
    <fields>
        <fullName>Category_txt__c</fullName>
        <label>Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Against__c</fullName>
        <label>Check Against</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handling_txt__c</fullName>
        <label>Handling</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Word_txt__c</fullName>
        <label>Word</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <label>Filter Words</label>
</CustomObject>